--- a/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/tabla-factores-coeficientes.component.scss
+++ b/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/tabla-factores-coeficientes.component.scss
@@ -8,51 +8,31 @@
 	gap: 20px;
 	width: 100%;
 	padding: 20px 40px;
-
 	&__breadcrumb {
-		font-family: 'FrutigerBold';
-		color: #1b1b1fa8;
+		font-family: $font;
+		color: rgba($gray-900, 0.66);
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		gap: 6px;
 		font-size: 16px;
-
 		.green {
-			color: $color-primary-green;
+			color: $verde;
 			font-weight: 600;
 		}
 	}
-
 	&__actions {
-		display: flex;
 		flex-wrap: wrap;
-		justify-content: center;
-		align-items: center;
 		gap: 4rem; // más espacio entre botones
 		width: 100%;
 		max-width: 1200px;
 		margin: 20px 0;
-
 		ui-button {
 			min-width: 220px;
 			text-align: center;
-		}
-	}
-
 	ui-datagrid {
-		width: 100%;
-		max-width: 1200px;
 		margin-top: 10px;
-	}
-
 	&__footer {
-		display: flex;
 		justify-content: flex-end;
-		width: 100%;
-		max-width: 1200px;
 		margin-top: 24px;
-
-	}
-
 }
