--- a/src/app/views/gestion-tarifas/2-definicion-factores/definicion-factores.component.scss
+++ b/src/app/views/gestion-tarifas/2-definicion-factores/definicion-factores.component.scss
@@ -5,29 +5,24 @@
 	text-align: center;
 	.placeholder {
 		@include body-regular;
-		color: $color-primary-green;
+		color: $verde;
 		&.error {
-			color: $color-primary-red;
+			color: $rojo;
 		}
 	}
 	
 	&__breadcrumbs {
-		font-family: 'FrutigerBold';
-		color: #1b1b1fa8;
+		font-family: $font;
+		color: rgba($gray-900, 0.66);
 		display: flex;
 		align-items: center;
 		gap: 4px;
 		font-size: 16px;
 		padding: 1rem 0;
 		.green {
-			color: $color-primary-green;
-		}
-	}
-
+			color: $verde;
 	&__data {
-		display: flex;
 		flex-direction: row;
 		justify-content: center;
 		overflow-x: auto;
-	}
 }
