--- a/src/app/views/gestion-tarifas/2-definicion-factores/modal-anadir-config/modal-anadir-config.component.scss
+++ b/src/app/views/gestion-tarifas/2-definicion-factores/modal-anadir-config/modal-anadir-config.component.scss
@@ -7,11 +7,10 @@
 	justify-content: center;
 	gap: 12px;
 	h2 {
-		color: $color-primary-green;
+		color: $verde;
 		@include h6;
 		font-size: 22px;
 	}
 	ui-button {
 		margin-top: 12px;
-	}
 }
