--- a/src/app/views/configuracion-factores-deducibles/modal-anadir-factor-deducible/modal-anadir-factor-deducible.component.scss
+++ b/src/app/views/configuracion-factores-deducibles/modal-anadir-factor-deducible/modal-anadir-factor-deducible.component.scss
@@ -7,7 +7,7 @@
 	justify-content: center;
 	gap: 12px;
 	h2 {
-		color: $color-primary-green;
+		color: $verde;
 		@include h6;
 		font-size: 22px;
 		margin-bottom: 12px;
@@ -22,34 +22,19 @@
 		padding-left: 50px;
 		padding-right: 50px;
 		gap: 50px;
-	}
-
 	&__principal-text{
-		color: $color-primary-green;
 		text-align: center;
-		font-family: Frutiger;
+		font-family: $font;
 		font-size: 16px;
 		font-style: normal;
 		font-weight: 400;
 		line-height: 120%; 
-	}
-
 	&__text-container{
 		text-align: left; 
 		margin-top: 1rem;
 		margin-bottom: 1rem;
-	}
-
 	.placeholder {
 		@include body-regular;
-		color: $color-primary-green;
-	}
-
 	.error {
-		@include body-regular;
-		color: $color-primary-red;
-	}
-
+		color: $rojo;
 }
-
-
