--- a/src/app/views/gestion-coeficientes/1-configuracion-base/modal-copiar-coeficientes-otro-plan/modal-copiar-coeficientes-otro-plan.component.scss
+++ b/src/app/views/gestion-coeficientes/1-configuracion-base/modal-copiar-coeficientes-otro-plan/modal-copiar-coeficientes-otro-plan.component.scss
@@ -9,35 +9,27 @@
 	text-align: center;
 	padding: 20px 40px;
 	gap: 16px;
-
 	&__title {
-		color: $color-primary-green;
+		color: $verde;
 		@include h6;
 		font-size: 22px;
 		font-weight: 600;
 		margin-bottom: 8px;
 	}
-
 	&__subtitle {
 		color: #000;
-		font-family: Frutiger;
+		font-family: $font;
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 160%;
 		margin-bottom: 16px;
-	}
-
 	&__select {
 		min-width: 200px;
 		margin: 0 auto 24px;
-	}
-
 	&__actions {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		gap: 40px;
 		margin-top: 8px;
-	}
 }
-
