--- a/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-anadir-factores-coeficientes/modal-anadir-factores-coeficientes.component.scss
+++ b/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-anadir-factores-coeficientes/modal-anadir-factores-coeficientes.component.scss
@@ -7,14 +7,12 @@
 	align-items: center;
 	justify-content: center;
 	gap: 12px;
-
 	h2 {
-		color: $color-primary-green;
+		color: $verde;
 		@include h6;
 		font-size: 22px;
 		margin-bottom: 12px;
 	}
-
 	&__actions {
 		display: flex;
 		flex-direction: row;
@@ -24,22 +22,13 @@
 		padding-left: 50px;
 		padding-right: 50px;
 		gap: 50px;
-	}
-
 	.placeholder {
 		@include body-regular;
-		color: $color-primary-green;
-	}
-
 	.error {
-		@include body-regular;
-		color: $color-primary-red;
-	}
-
+		color: $rojo;
 	::ng-deep {
 		.transferList__box {
 			max-height: 150px;
 			overflow: auto;
 		}
-	}
 }
