--- a/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-consulta-grupo-valores-coeficientes/modal-consulta-grupo-valores-coeficientes.component.scss
+++ b/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-consulta-grupo-valores-coeficientes/modal-consulta-grupo-valores-coeficientes.component.scss
@@ -8,66 +8,39 @@
   justify-content: center;
   gap: 16px;
   text-align: center;
-
   h2 {
-    color: $color-primary-green;
+    color: $verde;
     @include h6;
     font-size: 24px;
     margin-bottom: 12px;
   }
-
   &__text-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 8px;
-  }
-
   &__select {
     margin: 0 auto;
-  }
-
   &__principal-text {
     color: #000;
     text-align: center;
-    font-family: Frutiger;
+    font-family: $font;
     font-size: 16px;
     font-weight: 400;
     line-height: 160%;
-  }
-
   &__breadcrumb {
-    font-family: 'FrutigerBold';
-    color: #1b1b1fa8;
+    font-family: $font;
+    color: rgba($gray-900, 0.66);
     font-size: 14px;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 4px;
     padding-top: 8px;
-  }
-
   &__actions {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 20px 0;
-  }
-
   .green {
-    color: $color-primary-green;
     font-weight: 600;
-  }
-
   .placeholder {
     @include body-regular;
-    color: $color-primary-green;
-  }
-
   .error {
-    @include body-regular;
-    color: $color-primary-red;
-  }
+    color: $rojo;
 }
