--- a/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-delete-valor-coeficientes/modal-delete-valor-coeficientes.component.scss
+++ b/src/app/views/gestion-coeficientes/2-creacion-de-coeficientes/modal-delete-valor-coeficientes/modal-delete-valor-coeficientes.component.scss
@@ -7,65 +7,42 @@
   align-items: center;
   justify-content: center;
   gap: 12px;
-
   h2 {
-    color: $color-primary-green;
+    color: $verde;
     @include h6;
     font-size: 24px;
     margin-bottom: 12px;
   }
-
   &__text-container {
     text-align: left;
-  }
-
   &__principal-text {
     color: #000;
     text-align: center;
-    font-family: Frutiger;
+    font-family: $font;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 160%;
-  }
-
   &__secondary-text {
     display: flex;
     flex-direction: row;
     color: var(--Gris, #C1C1C1);
-    font-family: Frutiger;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 160%;
     margin-top: 0.7rem;
-  }
-
   &__actions {
-    display: flex;
-    flex-direction: row;
     align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 50px;
     padding-right: 50px;
     gap: 50px;
-  }
-
   .placeholder {
     @include body-regular;
-    color: $color-primary-green;
-  }
-
   .error {
-    @include body-regular;
-    color: $color-primary-red;
-  }
-
+    color: $rojo;
   ::ng-deep {
     .transferList__box {
       max-height: 150px;
       overflow: auto;
     }
-  }
 }
