--- a/src/app/views/gestion-coeficientes/3-asignacion-coeficientes/modal-edit-coeficiente/modal-edit-coeficiente.component.scss
+++ b/src/app/views/gestion-coeficientes/3-asignacion-coeficientes/modal-edit-coeficiente/modal-edit-coeficiente.component.scss
@@ -6,31 +6,25 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-
   &__title {
-    color: $color-primary-green;
+    color: $verde;
     font-size: 24px;
     margin-bottom: 10px;
-    font-family: FrutigerBold;
+    font-family: $font;
   }
-
   &__form {
     width: 100%;
     text-align: left;
     margin-top: 8px;
-
     label {
-      font-family: Frutiger;
+      font-family: $font;
       font-size: 16px;
       margin-bottom: 4px;
       display: block;
     }
-  }
-
   &__actions {
     display: flex;
     justify-content: center;
     gap: 40px;
     margin-top: 20px;
-  }
 }
