--- a/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/modal-consulta-combinacion-valores-coeficiente/modal-consulta-combinacion-valores-coeficiente.component.scss
+++ b/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/modal-consulta-combinacion-valores-coeficiente/modal-consulta-combinacion-valores-coeficiente.component.scss
@@ -7,15 +7,13 @@
 	align-items: center;
 	justify-content: center;
 	gap: 12px;
-
 	h2 {
-		color: $color-primary-green;
+		color: $verde;
 		@include h6;
 		font-size: 24px;
 		margin-bottom: 12px;
 		text-align: center;
 	}
-
 	&__actions {
 		display: flex;
 		flex-direction: row;
@@ -25,53 +23,30 @@
 		padding-left: 50px;
 		padding-right: 50px;
 		gap: 50px;
-	}
-
 	&__text-container {
 		text-align: left;
 		width: 100%;
-	}
-
 	&__principal-text {
 		color: #000;
-		text-align: center;
-		font-family: Frutiger;
+		font-family: $font;
 		font-size: 16px;
 		font-weight: 400;
 		line-height: 160%;
-	}
-
 	&__breadcrumb {
-		font-family: "FrutigerBold";
-		color: #1B1B1FA8;
+		font-family: $font;
+		color: rgba($gray-900, 0.66);
 		font-size: 14px;
-		font-weight: 400;
-		line-height: 160%;
-		display: flex;
-		align-items: center;
 		justify-content: center;
 		padding-top: 12px;
 		padding-left: 52px;
 		padding-right: 52px;
-	}
-
 	&__select {
 		width: fit-content;
 		position: relative;
 		left: 25%;
-	}
-
 	.consultaModal__select {
-		width: fit-content;
-		position: relative;
-		left: 25%;
-
 		&:not(:first-child) {
 			margin-top: 12px;
 		}
-	}
-
 	.green {
-		color: $color-primary-green;
-	}
 }
