--- a/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/modal-delete-combinacion-coeficiente/modal-delete-combinacion-coeficiente.component.scss
+++ b/src/app/views/gestion-coeficientes/4-tabla-factores-coeficientes/modal-delete-combinacion-coeficiente/modal-delete-combinacion-coeficiente.component.scss
@@ -7,47 +7,34 @@
   align-items: center;
   justify-content: center;
   gap: 12px;
-
   h2 {
-    color: $color-primary-green;
+    color: $verde;
     @include h6;
     font-size: 24px;
     margin-bottom: 12px;
   }
-
   &__text-container {
     text-align: left;
-  }
-
   &__principal-text {
     color: #000;
     text-align: center;
-    font-family: Frutiger;
+    font-family: $font;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 160%;
-  }
-
   &__secondary-text {
     display: flex;
     flex-direction: row;
     color: #C1C1C1;
-    font-family: Frutiger;
     font-size: 16px;
     margin-top: 0.7rem;
-
     .error {
-      color: $color-primary-red;
+      color: $rojo;
       margin-right: 6px;
     }
-  }
-
   &__actions {
-    display: flex;
-    flex-direction: row;
     align-items: center;
     padding: 20px 50px;
     gap: 50px;
-  }
 }
