--- a/src/app/views/gestion-coeficientes/gestion-coeficientes.component.scss
+++ b/src/app/views/gestion-coeficientes/gestion-coeficientes.component.scss
@@ -7,25 +7,19 @@
 	flex-direction: column;
 	gap: 36px;
 	flex: 1;
-
 	&__title {
 		@include h5;
-		color: $color-primary-green;
+		color: $verde;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		padding: 52px;
 	}
 }
-
 .green {
-	color: $color-primary-green;
-}
-
+	color: $verde;
 .content {
 	padding-left: 2rem;
 	padding-right: 2rem;
-}
 .stepper-wrapper {
   padding-right: 3rem;
-}
