--- a/src/app/views/gestion-factores-definicion/modal-definicion-factores/modal-definicion-factores.component.scss
+++ b/src/app/views/gestion-factores-definicion/modal-definicion-factores/modal-definicion-factores.component.scss
@@ -6,12 +6,11 @@
 
 .title {
 	@include h5;
-	color: $color-primary-green;
+	color: $verde;
 	text-align: center;
 	margin-bottom: 24px;
 	padding-top: 32px;
 }
-
 .factores {
 	&__form {
 		display: flex;
@@ -20,21 +19,13 @@
 		justify-content: center;
 	}
 	&__content {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
 		padding-right: 300px;
 		padding-left: 300px;
 		padding-top: 50px;
 		padding-bottom: 50px;
-	}
-}
-
 //Se sobreescribe el estilo de "Mostrando los registos" de la paginación del datagrid
 .tableBasic__pagination--current {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	gap: 12px;
-}
