--- a/src/app/views/gestion-tarifas/3-combinacion-factores-valores/modal-combinacion-factores-precio/modal-combinacion-factores-precio.component.scss
+++ b/src/app/views/gestion-tarifas/3-combinacion-factores-valores/modal-combinacion-factores-precio/modal-combinacion-factores-precio.component.scss
@@ -5,14 +5,12 @@
 	text-align: center;
 	.placeholder {
 		@include body-regular;
-		color: $color-primary-green;
+		color: $verde;
 		&.error {
-			color: $color-primary-red;
+			color: $rojo;
 		}
 	}
-
 	&__titulo-ambito {
-		@include body-regular;
 		display: flex;
 		flex-direction: row;
 		//justify-content: center;
@@ -20,49 +18,23 @@
 		font-weight: 400;
 		font-style: normal;
 		line-height: 160%;
-		color: $color-secondary-black-66;
+		color: rgba($gray-900, 0.66);
 		margin-bottom: 1rem;
 		margin-left: 3.2rem;
 		margin-right: 3.2rem;
-	}
-
 	&__button-filter {
 		margin-top: 1.5rem;
-	}
-
 	&__combos {
-		display: flex;
 		align-items: center;
 		gap: 24px;
 		width: fit-content;
 		margin-bottom: 2rem;
-		//justify-content: center;
-		margin-left: 3.2rem;
-		margin-right: 3.2rem;
-	}
-
 	&__breadcrumbs {
-		@include body-regular;
-		display: flex;
-		flex-direction: row;
 		justify-content: center;
 		font-size: 16px;
-		font-weight: 400;
-		font-style: normal;
-		line-height: 160%;
-		color: $color-secondary-black-66;
-	}
-
 	&__data {
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
 		overflow-x: auto;
-	}
-
 	&__actions {
-		display: flex;
-		align-items: center;
 		padding-top: 20px;
 		padding-bottom: 20px;
 		padding-left: 50px;
@@ -70,15 +42,8 @@
 		gap: 50px;
 		margin-top: 2rem;
 		justify-content: space-between;
-	}
-
 	.green{
-		color: $color-primary-green;
-	}
-
-
 	ui-table {
 		min-width: 92%;
-	}
 	
 }
