--- a/src/app/views/gestion-tarifas/4-consulta-riesgo-tarificado/modal-aplicar-limites/modal-aplicar-limites.component.scss
+++ b/src/app/views/gestion-tarifas/4-consulta-riesgo-tarificado/modal-aplicar-limites/modal-aplicar-limites.component.scss
@@ -7,43 +7,31 @@
 	align-items: center;
 	justify-content: center;
 	gap: 12px;
-
 	h2 {
-		color: $color-primary-green;
+		color: $verde;
 		font-size: 22px;
-		font-family: Frutiger, sans-serif;
+		font-family: $font;
 		margin-bottom: 0px;
 	}
-
 	.select-row {
 		display: flex;
 		justify-content: center;
 		gap: 80px;
 		margin-top: 25px;
 		width: 100%;
-	}
-
 	.select-column {
-		display: flex;
 		flex-direction: column;
 		gap: 6px;
 		align-items: flex-start;
-	}
-
 	.select-label {
 		color: rgba(27, 27, 31, 0.66);
-		font-family: Frutiger, sans-serif;
 		font-size: 24px;
 		font-weight: 400;
 		margin-left: 4px;
-	}
-
 	.actions {
-		display: flex;
 		flex-direction: row;
 		align-items: center;
 		padding-top: 35px;
 		padding-bottom: 20px;
 		gap: 60px;
-	}
 }
