--- a/src/app/views/gestion-tarifas/4-consulta-riesgo-tarificado/modal-ver-detalle/modal-ver-detalle.component.scss
+++ b/src/app/views/gestion-tarifas/4-consulta-riesgo-tarificado/modal-ver-detalle/modal-ver-detalle.component.scss
@@ -9,41 +9,29 @@
 
     h2{
         font-size:28px;
-        color:$color-primary-green;
+        color:$verde;
         margin-bottom:12px;
         .code-value {
             color: #000;
         }
     }
 }
-
 .frame{
     width:1040px;
     background:white;
-    padding:24px;
     border-radius:12px;
     box-shadow:0px 2px 8px rgba(0,0,0,0.25);
-    display:flex;
-    flex-direction:column;
     gap:24px;
-}
-
 .tags{
-    display:flex;
     flex-wrap:wrap;
     gap:16px;
-}
 ui-tag.tag p{
     font-weight:600;   // <--- texto en negrita
-}
 .tag{
     padding:4px 16px;
     border-radius:6px;
-    background:$color-primary-green;
+    background:$verde;
     color:white;
     font-size:18px;
-}
-
 .close-btn{
     margin-top:8px;
-}
